@@ -57,6 +57,7 @@
             nRF5x: Move from separate sdk_config.h to a single targets/nrf5x/app_config.h file
             Original board: Remove Graphics.*Ellipse and StorageFile when networking enabled to allow builds
             Update S132 Softdevice from 3.0.0 to 3.1.0 (fix #1999)
+            nRF5x: Allow Espruino builds with a configurable MTU - move Espruino boards to 53 byte (from 23) (#1998)
  
      2v08 : nRF52: Added option to build in I2C slave support
             Fix Tensorflow aiGesture regression from 2v07 (re-add opcodes) (fix #1936)
